--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="songItem">
                     <img src="covers/1.jpg" alt="1">
                     <span class="songName">Let me Love You</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i id="0" class="far songItemPlay fa-play-circle"></i> </span></span>
+                    <span class="songlistplay"><span class="timestamp">05:34 </span> <i id="0" class="far songItemPlay fa-play-circle"></i> </span>
                 </div>
                 <div class="songItem">
                     <img src="covers/2.jpg" alt="1">
